--- a/build.yml
+++ b/build.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install Dependencies
         run: yarn install
 
+      - name: Lint Code
+        run: yarn lint
+
       - name: Run Build
         run: yarn build
 
