--- a/build.yml
+++ b/build.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - '*'
+  workflow_dispatch:
 
 jobs:
   build_and_test:
@@ -33,7 +34,7 @@ jobs:
   bump_and_deploy:
     runs-on: ubuntu-latest
     needs: build_and_test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'workflow_dispatch'
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
