--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,8 @@
     "outDir": "./dist/",
     "noImplicitAny": true,
     "jsx": "react"
+    "jsx": "react",
   },
-  "include": [
-    "./src/**/*"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["./src/**/*"],
+  "exclude": ["node_modules"]
 }
