--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "license": "UNLICENSED",
   "dependencies": {
+    "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "ts-loader": "^9.5.0",
     "typescript": "^5.2.2",
     "webpack": "^5.89.0",
@@ -10,6 +12,9 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.7",
+    "@types/js-cookie": "^3.0.5",
+    "@types/lodash": "^4.14.200",
+    "@types/segment-analytics": "^0.0.36",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
     "eslint": "^8.52.0",
