--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ on:
 
 jobs:
   build_and_test:
+    name: 'Build & Test'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
@@ -31,7 +32,8 @@ jobs:
       - name: Run Tests
         run: yarn test
 
-  bump_and_deploy:
+  bump_and_release:
+    name: 'Bump Version & Release'
     runs-on: ubuntu-latest
     needs: build_and_test
     if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'workflow_dispatch'
@@ -44,6 +46,8 @@ jobs:
 
       - name: Bump Version and Tag
         run: |
+          git config user.name "GitHub Actions"
+          git config user.email "github-actions@xip.co"
           yarn version --patch
           echo "NEW_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_ENV
 
@@ -54,8 +58,6 @@ jobs:
 
       - name: Commit & Push
         run: |
-          git config user.name "GitHub Actions"
-          git config user.email "github-actions@xip.co"
           git add dist
           git commit -m "Automated build for release, version: ${{ env.NEW_VERSION }}"
           git tag ${{ env.NEW_VERSION }}
