--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,7 @@ jobs:
 
       - name: Run Build
         run: |
+          yarn install
           export NODE_ENV=production
           yarn build
 
