--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,7 @@ jobs:
           git config user.email "github-actions@xip.co"
           git add -f dist
           yarn version --patch
-          echo "NEW_VERSION=$(cat package.json | jq -r '.version')" >> $GITHUB_ENV
-          git commit --amend --no-edit -m "Automated build for release ${{ env.NEW_VERSION }}"
-          git tag ${{ env.NEW_VERSION }}
+          NEW_VERSION=$(cat package.json | jq -r '.version')
+          git commit --amend --no-edit -m "Automated build for release $NEW_VERSION"
+          git tag $NEW_VERSION
           git push --follow-tags
