--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,5 +58,5 @@ jobs:
           yarn version --patch
           NEW_VERSION=$(cat package.json | jq -r '.version')
           git commit --amend --no-edit -m "Automated build for release $NEW_VERSION"
-          git tag $NEW_VERSION
+          git tag -a $NEW_VERSION -m "Release $NEW_VERSION"
           git push --follow-tags
