--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.0.3",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "webpack-dev-server": "^4.15.1"
   },
   "scripts": {
     "build": "webpack",
     "test": "jest",
-    "lint": "eslint 'src/**/*.{js,ts}'"
+    "lint": "eslint 'src/**/*.{js,ts}'",
+    "start": "webpack serve"
   }
 }
