--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ts-loader": "^9.5.0",
     "typescript": "^5.2.2",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/jest": "^29.5.7",
